<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:background="@color/background"
                                             tools:context="uk.co.j15t98j.simplechatapp.LoginActivity"
                                             android:id="@+id/constraintLayout">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:ems="10"
        android:textColor="@android:color/white"
        android:id="@+id/emailField"
        app:layout_constraintLeft_toLeftOf="@+id/passwordField"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout"
        android:layout_marginTop="77dp"
        tools:layout_constraintTop_creator="1"
        app:layout_constraintRight_toRightOf="@+id/passwordField"
        tools:layout_constraintRight_creator="1"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:textColor="@android:color/white"
        android:hint="@string/password"
        android:ems="10"
        android:id="@+id/passwordField"
        app:layout_constraintLeft_toLeftOf="@+id/constraintLayout"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintTop_toBottomOf="@+id/emailField"
        android:layout_marginTop="19dp"
        tools:layout_constraintTop_creator="1"
        app:layout_constraintRight_toRightOf="@+id/constraintLayout"
        tools:layout_constraintRight_creator="1"/>

    <Button
        android:text="@string/log_in"
        android:onClick="onClick"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:id="@+id/login_button"
        app:layout_constraintLeft_toLeftOf="@+id/passwordField"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintTop_toBottomOf="@+id/passwordField"
        android:layout_marginTop="19dp"
        tools:layout_constraintTop_creator="1"/>

    <Button
        android:text="@string/sign_up"
        android:onClick="onClick"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:id="@+id/signup_button"
        app:layout_constraintTop_toBottomOf="@+id/passwordField"
        android:layout_marginTop="19dp"
        tools:layout_constraintTop_creator="1"
        app:layout_constraintRight_toRightOf="@+id/passwordField"
        tools:layout_constraintRight_creator="1"/>

    <View
        android:layout_width="0dp"
        android:layout_height="7dp"
        android:background="@android:color/white"
        app:layout_constraintLeft_toLeftOf="@+id/constraintLayout"
        android:layout_marginStart="64dp"
        app:layout_constraintTop_toTopOf="@+id/textView"
        app:layout_constraintRight_toRightOf="@+id/constraintLayout"
        android:layout_marginEnd="64dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView"/>

    <TextView
        android:text="@string/or"
        android:background="@color/background"
        android:textColor="@android:color/white"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        app:layout_constraintLeft_toLeftOf="@+id/constraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/login_button"
        android:layout_marginTop="40dp"
        tools:layout_constraintTop_creator="1"
        app:layout_constraintRight_toRightOf="@+id/constraintLayout"
        android:textAllCaps="true"/>

    <com.google.android.gms.common.SignInButton
        android:id="@+id/google_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@+id/constraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:layout_marginTop="32dp"
        app:layout_constraintRight_toRightOf="@+id/constraintLayout"/>

</android.support.constraint.ConstraintLayout>
